update launch.json for xylophone

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -32,5 +32,12 @@
             "request": "launch",
             "type": "dart"
         },
+        {
+            "program": "lib/main.dart",
+            "name": "xylophone",
+            "cwd": "xylophone",
+            "request": "launch",
+            "type": "dart"
+        },
     ]
 }
