--- a/bmi_calculator/android/settings.gradle
+++ b/bmi_calculator/android/settings.gradle
@@ -22,5 +22,5 @@ plugins {
     id "org.jetbrains.kotlin.android" version "1.8.22" apply false
 }
 
-rootProject = "bmi_calculator"
+rootProject.name = "bmi_calculator"
 include ":app"
