--- a/destini/android/settings.gradle
+++ b/destini/android/settings.gradle
@@ -22,5 +22,5 @@ plugins {
     id "org.jetbrains.kotlin.android" version "1.8.22" apply false
 }
 
-rootProject = "destini"
+rootProject.name = "destini"
 include ":app"
